# foxchain-id

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  WASM.md
examples/: wasm-example.html
metadata/chains/: akash.json  arbitrum.json  avalanche.json  base.json  bitcoin.json  bsc.json  cardano.json  celo.json  cosmos_hub.json  dogecoin.json  ethereum.json  fantom.json  gnosis.json  juno.json  kava.json  kusama.json  litecoin.json  optimism.json  osmosis.json  polkadot.json  polygon.json  regen.json  secret_network.json  sentinel.json  solana.json  stargaze.json  substrate.json  terra.json  tron.json
src/: identify.rs  lib.rs  wasm.rs
src/input/: classifier.rs  matcher.rs  mod.rs
src/models/: chain.rs
src/pipelines/addresses/: bitcoin_p2pkh.rs  evm.rs  tron.rs
src/registry/: build.rs  chain_converter.rs  metadata.rs
src/shared/checksum/: base58check.rs
src/shared/crypto/: secp256k1.rs
tests/: block_hash_detection.rs  comprehensive_chain_detection.rs
